--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>sfg-pet-clinic</artifactId>
-        <groupId>alr</groupId>
+        <groupId>com.alr</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <artifactId>pet-clinic-data</artifactId>
-            <groupId>alr</groupId>
+            <groupId>com.alr</groupId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
